--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,22 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  {% block title %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> {% block title %}
   <title>我的博客</title>
   {% endblock title %}
 
   <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{% static 'blog/style/base.css' %}" rel="stylesheet">
-  {% block link %}{% endblock link %}
+  <link href="{% static 'blog/style/base.css' %}" rel="stylesheet"> {% block link %}{% endblock link %} {% block script %}{% endblock script %}
 
-  {% block script %}{% endblock script %}
+  <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
+
 <body>
   <div id="app">
 
@@ -25,7 +26,7 @@
           <a class="navbar-brand" href="#">LOGO</a>
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">首页</a>
+              <a class="nav-link" href="/">首页</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">博客</a>
@@ -41,27 +42,41 @@
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Search">
               <div class="input-group-append">
-                <button class="btn btn-success" type="submit">Search</button>  
+                <button class="btn btn-success" type="submit">Search</button>
               </div>
             </div>
           </form>
           <div class="flex-content"></div>
-          <ul class="nav">
+          {% if user.is_authenticated %}
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">{{ user.username }}</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">我的主页</a>
+                <a class="dropdown-item" href="#">设置</a>
+                <a class="dropdown-item" href="{% url 'logout' %}">退出</a>
+              </div>
+            </li>
+          </ul>
+          {% else %}
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">登陆</a>
+              <a class="nav-link" href="{% url 'login' %}">登录</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'users:register' %}">注册</a>
             </li>
           </ul>
+          {% endif %}
         </nav>
       </div>
     </header>
 
     <div class="main-body">
-    {% block body %}{% endblock body %}
+      {% block body %}{% endblock body %}
     </div>
 
   </div>
 </body>
+
 </html>
