--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% load staticfiles %} {% block title %}
-<title>注册 - 我的博客</title>
+<title>找回密码 - 我的博客</title>
 {% endblock title %} {% block link %}
 <link rel="stylesheet" href="{% static 'users/style/index.css' %}"> {% endblock link %} {% block body %}
 <div class="users-page">
@@ -7,9 +7,9 @@
     <div class="row">
       <div class="col-md-6 offset-md-3">
         <div class="card">
-          <div class="card-header">登录</div>
+          <div class="card-header">找回密码</div>
           <div class="card-body">
-            <form action="{% url 'login' %}" method="POST">
+            <form action="{% url 'password_reset' %}" method="POST">
               {% csrf_token %} {% if form.non_field_errors %}
               <div class="alert alert-danger errors-tips">
                 {{ form.non_field_errors }}
@@ -23,15 +23,11 @@
                 {{ field.errors }}
               </div>
               {% endif %} {% endfor %}
-              <button type="submit" class="btn btn-primary btn-block">登录</button>
+              <button type="submit" class="btn btn-primary btn-block">提交</button>
             </form>
           </div>
-          <div class="card-footer text-center flex-list">
-            <a href="{% url 'password_reset' %}">找回密码</a>
-            <div class="flex-content"></div>
-            <span>还没帐号？
-              <a href="{% url 'users:register' %}">注册</a>
-            </span>
+          <div class="card-footer text-center">
+            <a href="{% url 'login' %}">返回登录</a>
           </div>
         </div>
       </div>
