--- a/blog/static/blog/style/base.css
+++ b/blog/static/blog/style/base.css
@@ -1,3 +1,13 @@
+html, body, #app {
+  width: 100%;
+  height: 100%;
+}
+
+#app {
+  display: flex;
+  background: #f6f6f6;
+}
+
 .flex-list {
   display: flex;
 }
@@ -9,5 +19,6 @@
 }
 
 .main-body {
+  width: 100%;
   padding-top: 56px;
 }
