--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,12 @@
   {% endblock title %}
 
   <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{% static 'blog/style/base.css' %}" rel="stylesheet"> {% block link %}{% endblock link %} {% block script %}{% endblock script %}
+  <link href="{% static 'blog/style/base.css' %}" rel="stylesheet">{% block link %}{% endblock link %}
 
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  {% block script %}{% endblock script %}
 </head>
 
 <body>
@@ -52,8 +53,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">{{ user.username }}</a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">我的主页</a>
-                <a class="dropdown-item" href="#">设置</a>
+                <a class="dropdown-item" href="{% url 'users:accounts' %}">我的主页</a>
+                <a class="dropdown-item" href="{% url 'users:settings' %}">设置</a>
                 <a class="dropdown-item" href="{% url 'logout' %}">退出</a>
               </div>
             </li>
