--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% load staticfiles %} {% block title %}
 <title>注册 - 我的博客</title>
 {% endblock title %} {% block link %}
-<link rel="stylesheet" href="{% static 'users/style/register.css' %}"> {% endblock link %} {% block body %}
-<div class="register-page">
+<link rel="stylesheet" href="{% static 'users/style/index.css' %}"> {% endblock link %} {% block body %}
+<div class="users-page">
   <div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
