--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
   {% endblock title %}
 
   <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{% static 'blog/style/base.css' %}" rel="stylesheet">{% block link %}{% endblock link %}
+  <link href="{% static 'style/base.css' %}" rel="stylesheet">
+  <link href="{% static 'style/index.css' %}" rel="stylesheet">{% block link %}{% endblock link %}
 
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
