--- a/static/style/base.css
+++ b/static/style/base.css
@@ -1,6 +1,6 @@
 html, body, #app {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 #app {
@@ -10,6 +10,11 @@ html, body, #app {
 
 .flex-list {
   display: flex;
+  align-items: center;
+}
+
+.flex-item {
+  flex: 0 0 auto;
 }
 
 .flex-content {
@@ -21,4 +26,12 @@ html, body, #app {
 .main-body {
   width: 100%;
   padding-top: 56px;
+}
+
+.pt15 {
+  padding-top: 15px;
+}
+
+.pb15 {
+  padding-bottom: 15px;
 }
