--- a/templates/users/accounts.html
+++ b/templates/users/accounts.html
@@ -19,7 +19,7 @@
           {% for article in article_list %}
           <li class="list-group-item list-group-item-action flex-list">
             <div class="flex-item">
-              <a href="">{{ article.title }}</a>
+              <a href="{% url 'blog:detail' article.pk %}">{{ article.title }}</a>
             </div>
             <div class="flex-content"></div>
             <div class="flex-item">
