--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -23,6 +23,7 @@
                 {{ field.errors }}
               </div>
               {% endif %} {% endfor %}
+              <input type="hidden" name="next" value="{{ next }}"/>
               <button type="submit" class="btn btn-primary btn-block">登录</button>
             </form>
           </div>
