--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -22,6 +22,7 @@
                 {{ field.errors }}
               </div>
               {% endif %} {% endfor %}
+              <input type="hidden" name="next" value="{{ next }}"/>
               <button type="submit" class="btn btn-primary btn-block">注册</button>
             </form>
           </div>
