--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -3,3 +3,19 @@
 {% block title %}
 <title>首页 - 我的博客</title>
 {% endblock title %}
+
+{% block body %}
+<div class="pt15 pb15">
+  <div class="container">
+    <div class="row card">
+      <div class="card-body">
+        <ul class="list-group">
+          <li class="list-group-item">First item</li>
+          <li class="list-group-item">Second item</li>
+          <li class="list-group-item">Third item</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock body %}
