--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,15 @@
   <title>我的博客</title>
   {% endblock title %}
 
+  <link href="https://cdn.bootcss.com/iview/3.1.4/styles/iview.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/twitter-bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
   <link href="{% static 'style/base.css' %}" rel="stylesheet">
   <link href="{% static 'style/index.css' %}" rel="stylesheet">{% block link %}{% endblock link %}
 
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
   <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <script src="https://cdn.bootcss.com/vue/2.5.17/vue.min.js"></script>
+  <script src="https://cdn.bootcss.com/iview/3.1.4/iview.min.js"></script>
   {% block script %}{% endblock script %}
 </head>
 
